--- a/app.json
+++ b/app.json
@@ -9,7 +9,7 @@
         "Bot",
         "V2"
     ],
-    "website": "https://github.com/MRK-YT",
+    "website": "https://github.com/EVA-MARIA-NARUTO-TEAM/Pro-Auto-Filter-Bot-V2",
     "repository": "https://github.com/EVA-MARIA-NARUTO-TEAM/Pro-Auto-Filter-Bot-V2",
     "success_url": "https://telegram.dog/mo_tech_yt",
     "env": {
